# realm-web-deploy

./: README.md  app.py  deploy.sh  install.sh  log-caddy.sh  log-panel.sh  main.sh  requirements.txt  restart.sh  start.sh  stop.sh  uninstall.sh
caddy/: Caddyfile.tpl
rust/: Cargo.toml
rust/src/: auth.rs  db.rs  main.rs  models.rs  process.rs
templates/: index.html  login.html
